apps/base/kasm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasm
  labels:
    goldilocks.fairwinds.com/enabled: "true"
